--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate to build a full stack web application using React, Node.js, Express and Webpack.",
   "main": "src/server/index.js",
   "scripts": {
-    "build": "webpack --mode production && rimraf ./build && npx tsc",
+    "build": "webpack --mode development && rimraf ./build && npx tsc",
     "start": "export JWT_SECRET=azerty && npm run build && node dist_server/index.js",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "export JWT_SECRET=azerty && nodemon src/server/index.js",
@@ -16,11 +16,14 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
+    "@types/prop-types": "^15.7.3",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "prop-types": "^15.7.2",
     "puppeteer": "^8.0.0",
     "random-word-fr": "^1.0.3",
     "react": "^16.5.2",
@@ -28,6 +31,7 @@
     "rimraf": "^3.0.2",
     "short-uuid": "^4.1.0",
     "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
@@ -36,6 +40,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/js-cookie": "^2.2.6",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
