--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "short-uuid": "^4.1.0",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.1",
+    "sqlite3": "^5.0.2",
     "ts-node": "^9.1.1",
+    "typeorm": "^0.2.32",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
